Add folders to ignore at .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,11 @@ prof
 tsconfig.tsbuildinfo
 .obsidian
 .quartz-cache
+daily notes/
+inbox/
 private/
+projects/
+projects someday/
+templates/
 .replit
 replit.nix
